--- a/src/app/stepper/stepper.component.html
+++ b/src/app/stepper/stepper.component.html
@@ -1,28 +1,44 @@
 <div class="stepper">
-    <div *ngIf="currentStep === 1">
-      <h1>Step 1: Press Go</h1>
-      <button (click)="nextStep()">Go</button>
-    </div>
-  
-    <div *ngIf="currentStep === 2">
-      <h1>Step 2: Choose Gender</h1>
-      <button (click)="chooseGender('Boy')">Boy</button>
-      <button (click)="chooseGender('Girl')">Girl</button>
-      <button (click)="previousStep()">Back</button>
-    </div>
-  
-    <div *ngIf="currentStep === 3">
-      <h1>Step 3: Choose Relationship</h1>
-      <button (click)="chooseRelationship('Love')">Love</button>
-      <button (click)="chooseRelationship('Friend')">Friend</button>
-      <button (click)="chooseRelationship('Hate')">Hate</button>
-      <button (click)="chooseRelationship('Play')">Play</button>
-      <button (click)="previousStep()">Back</button>
-    </div>
-  
-    <div *ngIf="currentStep === 4">
-      <h1>Step 4: Choose a Number (1-8)</h1>
-      <button *ngFor="let number of getNumbers()" (click)="chooseNumber(number)">{{ number }}</button>
-      <button (click)="previousStep()">Back</button>
+  <div *ngIf="currentStep === 1">
+    <!-- <h1>Step 1: Press Go</h1> -->
+    <button class="go-button" (click)="nextStep()">Go</button>
+  </div>
+
+  <div *ngIf="currentStep === 2">
+    <h1>Επίλεξε Φύλο</h1>
+    <div>
+      <div>
+        <button class="go-button-boy" (click)="chooseGender('Αγόρι')">Αγόρι</button>
+        <button class="go-button-girl" (click)="chooseGender('Κορίτσι')">
+          Κορίτσι
+        </button>
+      </div>
+      <button class="go-button-back" (click)="previousStep()">Πίσω</button>
     </div>
   </div>
+
+  <div *ngIf="currentStep === 3">
+    <h1>Step 3: Choose Relationship</h1>
+    <button class="go-button-red" (click)="chooseRelationship('Αγάπη')">
+      Αγάπη
+    </button>
+    <button class="go-button-blue" (click)="chooseRelationship('Φίλος')">
+      Φίλος
+    </button>
+    <button class="go-button go-button-hate" (click)="chooseRelationship('Μίσος')">
+      Μίσος
+    </button>
+    <button class="go-button go-button-play" (click)="chooseRelationship('Παιχνίδι')">
+      Παιχνίδι
+    </button>
+    <button class="go-button-back" (click)="previousStep()">Πίσω</button>
+  </div>
+
+  <div *ngIf="currentStep === 4">
+    <h1>Step 4: Choose a Number (1-8)</h1>
+    <button *ngFor="let number of getNumbers()" (click)="chooseNumber(number)">
+      {{ number }}
+    </button>
+    <button (click)="previousStep()">Πίσω</button>
+  </div>
+</div>
