--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #ffe4e1; /* Light pink background */
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+}
